@@ -4955,3 +4955,4 @@ Changelog for GXemul:
 
 20210215	Implementing the fadd.dss 88K instruction, and working a bit
 		more on the exception cases in the xmem instruction.
+20210220	Implementing mouse emulation support for the LUNA88K machine.
